--- a/gametribe/build.gradle
+++ b/gametribe/build.gradle
@@ -28,12 +28,12 @@ android {
         }
         release {
             //混淆
-            minifyEnabled true
+            minifyEnabled false
             //Zipalign优化
             zipAlignEnabled true
 
             // 移除无用的resource文件
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.android.support:design:22.2.1'
+    implementation 'com.android.support:cardview-v7:22.2.1'
+    implementation 'com.android.support:recyclerview-v7:22.2.1'
 }
