--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,12 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 28
+    minSdkVersion = 14
+    targetSdkVersion = 28
+    supportVersion = "28.0.0"
+
+    kotlin_version = "1.3.10"
+}
