--- a/gametribe/build.gradle
+++ b/gametribe/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.su.gametribe"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -47,7 +47,7 @@ configurations.all {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:22.2.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -57,7 +57,16 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'com.android.support:design:22.2.1'
-    implementation 'com.android.support:cardview-v7:22.2.1'
-    implementation 'com.android.support:recyclerview-v7:22.2.1'
+//    implementation 'com.android.support:design:22.2.1'
+//    implementation 'com.android.support:cardview-v7:22.2.1'
+//    implementation 'com.android.support:recyclerview-v7:22.2.1'
+//    implementation 'com.owen:tv-recyclerview:2.0.5'
+    implementation('com.owen:tv-focusborder:1.1.1', {
+        exclude group: 'com.android.support'
+    }
+    )
+    implementation 'com.owen:tv-widget:1.0.1'
+    implementation project(path: ':tv-recyclerview')
+
+//    implementation 'com.henryblue.library:tvrecyclerview:1.2.3'
 }
