--- a/gametribe/src/main/AndroidManifest.xml
+++ b/gametribe/src/main/AndroidManifest.xml
@@ -1,33 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.su.gametribe">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.su.gametribe">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".BaseApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/icon"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:testOnly="false"
-        android:theme="@style/AppTheme">
-        <activity android:name=".SecondMenuActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".DetailListActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:name=".BaseApplication" android:allowBackup="true" android:icon="@drawable/icon" android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
+        <activity android:name=".PersonInfoActivity" android:screenOrientation="landscape" android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".SecondMenuActivity" android:screenOrientation="landscape" android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DetailListActivity" android:screenOrientation="landscape" android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="landscape" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,16 +24,10 @@
         </activity>
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.su.gametribe.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
+            android:name="android.support.v4.content.FileProvider" android:authorities="com.su.gametribe.fileprovider" android:exported="false" android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
+                android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
         </provider>
-
-
     </application>
 
 </manifest>
