--- a/gametribe/build.gradle
+++ b/gametribe/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.su.gametribe.test"
+        applicationId "com.su.gametribe"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
