--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,13 @@
 
 buildscript {
     repositories {
-        google()
-        jcenter()
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        google()
+//        jcenter()
         maven { url "https://jitpack.io" }
     }
     dependencies {
@@ -16,8 +21,13 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        google()
+//        jcenter()
         maven { url "https://jitpack.io" }
     }
 }
